# banjo

./: $  .gitattributes  .gitignore  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  COCOA_IMPLEMENTATION_PLAN.md  CTestTestfile.cmake  DartConfiguration.tcl  Doxyfile  LICENSE  Make.bat  Makefile  README.md  cmake_install.cmake  nostd.todo.md  rename.py  sandbox_win32.c  sonar-project.properties  tdd_stream.c  test_coreaudio  test_coreaudio.c
.github/workflows/: cmake-multi-platform.yml  documentation.yml  release.yml  sonarqube.yml  static.yml  unix-make.yml  windows-msvc.yml
Testing/Temporary/: CTestCostData.txt
bakasab/: CMakeLists.txt  win32_window.c
cmake/: banjo-config.cmake.in  banjo.pc.in
docs/: 0-status.md  1-start.md  2-build.md  3-use.md  4-architecture.md  5-contributing.md  6-acknowledgements.md  DoxygenLayout.xml  api.md  architecture.md  build.md  containers.md  contributing.md  roadmap.todo.md
docs/template/: doxygen-awesome.css  header.html
examples/: BjAllocationCallbacks  BjArray.c  BjForwardList  BjForwardList.c  BjHashtable  BjHashtable.c  BjList.c  CMakeLists.txt  CTestTestfile.cmake  Makefile  array  array.c  assert  assert.c  audio_pcm  audio_pcm.c  bitmap_blit  bitmap_blit.c  bitmap_blit_colorkey.c  build_info  build_info.c  cli.c  cmake_install.cmake  drawing_2d  drawing_2d.c  drawing_text  drawing_text.c  event_callbacks  event_callbacks.c  event_polling  event_polling.c  events.c  events_callbacks.c  forward_list.c  game_of_life.c  handling_errors  handling_errors.c  hash_table.c  hash_tables  hash_tables.c  (+51 more)
examples/sdl/: CMakeLists.txt  bitmap.c  bitmap_blitting.c  drawing_2d  drawing_2d.c  game_of_life  game_of_life.c  load_bmp_file.c  renderer.c  sdl_bitmap_blitting.c  sdl_drawing_2d.c  sdl_game_of_life.c  sdl_helpers.c  sdl_helpers.h  sdl_load_bmp.c  sdl_renderer_example.c  sprite_animation.c
inc/banjo/: algorithms.h  api.h  app.h  array.h  assert.h  audio.h  bitmap.h  byte_stream.h  cli.h  color.h  config.h  containers.h  core.h  dib.h  draw.h  ecs.h  error.h  event.h  forward_list.h  framebuffer.h  geometry_2d.h  graphics.h  graphics_pipeline.h  hash_table.h  htable.h  input.h  io.h  linmath.h  list.h  log.h  main.h  main_callbacks.h  main_impl.h  main_new.h  mat.h  math.h  math.h.orig  memory.h  net.h  oldbmp.h  (+20 more)
poubelle/: app.c  app.h  window.c  window.h
resources/: .gitattributes  HOOPSArgParser.c  HOOPSArgParser.h  api-design-guide.md  architecture-framerate-final.md  framerate-architecture-report.md  framerate-control-guide.md  rename.py
sandbox/: CMakeLists.txt  audio_windows.c  demo_alsa.c  demo_mme.c  music.h  olcNoiseMaker.h
src/: api.c  array.c  array_t.h  audio.c  audio.h  audio_alsa.c  audio_emscripten.c  audio_layer.h  audio_mme.c  audio_none.c  audio_stream.c  audio_t.h  bitmap.c  bitmap.h  bitmap_16.c  bitmap_24.c  bitmap_32.c  bitmap_blit.c  bitmap_blit_mask.c  bitmap_charsets.h  bitmap_dib.c  bitmap_draw.c  bitmap_t.h  bitmap_text.c  bmp.c  bmp.h  byte_stream.c  check.h  cli.c  config.h  dib.c  dib.h  dib_oldbmp.c  error.c  errors.h  event.c  event_layer.c  event_layer.h  event_t.h  fake.c  (+72 more)
src/_rfu/: app.c  window.c
src/alsa/: audio.c  audio_alsa.c
src/cocoa/: video.m  video_cocoa.m
src/core/: array.c  array.h  errors.h  forward_list.c  hash_table.c  log.c  memory.c  memory.h
src/coreaudio/: audio_coreaudio.c
src/data/: array.h  forward_list.h  hash_table.h  list.h  world.h
src/ecs/: world.c  world.h
src/emscripten/: audio.c  audio_emscripten.c  video.c  video_emscripten.c
src/engine/: app.c  app.h  window.c  window.h
src/mme/: audio.c  audio_mme.c
src/posix/: net_posix.c  network_posix.c  system_posix.c  time_posix.c
src/unix/: system.c  system_unix.c  time.c  time_unix.c
src/win32/: net_win32.c  system_win32.c  time_win32.c  video.c  video_win32.c
src/x11/: video.c  video_x11.c
test/: BjArray.c  BjHashTable.c  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  core_array.c  custom_allocators.h  integration_draw.c  main.c  mock_memory.h  obj_BjArray.c  obj_BjGraphicsPipeline.c  obj_BjHashTable.c  obj_BjList.c  property_random.c  property_vec.c  stress_memory.c  stress_random.c  tdd_BjArray  tdd_BjArray.c  tdd_BjForwardList  tdd_BjForwardList.c  tdd_BjHashTable  tdd_BjHashTable.c  tdd_BjList.c  tdd_array  tdd_array.c  tdd_bitmap  tdd_bitmap.c  tdd_bitmap.c.nobuild  tdd_byte_stream.c  tdd_framebuffer.c  tdd_htable  tdd_htable.c  tdd_list  tdd_list.c  tdd_rbuffer.c  tdd_stream  tdd_stream.c  (+30 more)
